# rsiprtp

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  RALPH_PROMPT.md  README.md  SECURITY.md  deny.toml  fuzz_overnight.ps1  tests.md
.claude/: ralph-loop.local.md
crates/mdsiprtp-dialog/: Cargo.toml
crates/mdsiprtp-dialog/src/: invite.rs  lib.rs  manager.rs  state.rs
crates/mdsiprtp-media/: Cargo.toml
crates/mdsiprtp-media/src/: jitter.rs  lib.rs  mixer.rs  wav.rs
crates/mdsiprtp-media/src/codec/: g711.rs  g722.rs  mod.rs  opus.rs
crates/mdsiprtp-session/: Cargo.toml
crates/mdsiprtp-session/src/: call.rs  hold.rs  lib.rs  manager.rs  registration.rs  transfer.rs
crates/mdsiprtp-session/tests/: bitrate_bridge_remb.rs
crates/mdsiprtp-sip/: Cargo.toml
crates/mdsiprtp-sip/src/: auth.rs  headers.rs  lib.rs  message.rs  uri.rs
crates/rsiprtp/: Cargo.toml  public-api.txt
crates/rsiprtp-session/: Cargo.toml
crates/rsiprtp-session/src/: bitrate_bridge.rs  call.rs  hold.rs  lib.rs  manager.rs  registration.rs  session_codec.rs
crates/rsiprtp-session/tests/: bitrate_bridge_remb.rs  rtcp_drives_bridge.rs
crates/rsiprtp/examples/: ai_bridge.rs  basic_call.rs  ice_call.rs  session_timers.rs  voicemail.rs
crates/rsiprtp/fuzz/: .gitignore  Cargo.toml  M11_LAUNCH.md  README.md
crates/rsiprtp/fuzz/fuzz_targets/: sip_message_parse.rs  sip_message_parse_diff.rs  sip_message_roundtrip.rs
crates/rsiprtp/src/: lib.rs
crates/rsiprtp/src/core/: config.rs  mod.rs
crates/rsiprtp/src/dialog/: invite.rs  manager.rs  mod.rs  state.rs
crates/rsiprtp/src/ice/: agent.rs  mod.rs  turn.rs
crates/rsiprtp/src/media/: mod.rs
crates/rsiprtp/src/media/codec/: g722.rs  mod.rs  opus.rs
crates/rsiprtp/src/rtp/: mod.rs  rtcp.rs  session.rs
crates/rsiprtp/src/rtp/tests/: mod.rs  rfc3550.rs
crates/rsiprtp/src/sdp/: builder.rs  mod.rs  negotiation.rs
crates/rsiprtp/src/sdp/tests/: mod.rs  rfc4566.rs
crates/rsiprtp/src/session/: bitrate_bridge.rs  call.rs  hold.rs  ice_session.rs  manager.rs  mod.rs  registration.rs  session_codec.rs  transfer.rs
crates/rsiprtp/src/sip/: auth.rs  headers.rs  message.rs  mod.rs  uri.rs
crates/rsiprtp/src/sip/parser/: framing.rs  header.rs  message.rs  method.rs  mod.rs  name_addr.rs  status.rs
crates/rsiprtp/src/sip/parser/typed/: from.rs  mod.rs  to.rs  via.rs
crates/rsiprtp/src/sip/tests/: rfc3261.rs
crates/rsiprtp/src/srtp/: context.rs  dtls.rs  mod.rs  sdes.rs
crates/rsiprtp/src/transaction/: manager.rs  mod.rs  timer.rs
crates/rsiprtp/src/transaction/client/: invite.rs  non_invite.rs
crates/rsiprtp/src/transaction/server/: invite.rs  non_invite.rs
crates/rsiprtp/src/transaction/tests/: rfc3261_state_machines.rs
crates/rsiprtp/src/transport/: mod.rs  resolver.rs  tcp.rs  tls.rs  udp.rs
crates/rsiprtp/tests/: allocations_sip_parse.rs  asterisk_integration.rs  baresip_integration.rs  bitrate_bridge_remb.rs  builder_roundtrip.rs  concurrency_safety.rs  coverage_instantiations.rs  fault_handling.rs  fuzz_inventory.rs  ice_basic.rs  integration_advanced.rs  integration_basic_calls.rs  integration_resilience.rs  parser_diff.rs  parser_roundtrip.rs  prack.rs  register_auth_e2e.rs  rtcp_drives_bridge.rs  sdp_roundtrip.rs  security_input_validation.rs  session_timers.rs  via_roundtrip.rs
crates/rsiprtp/tests/baresip_integration/framework/: media_validator.rs  mod.rs  sip_endpoint.rs
crates/rsiprtp/tests/baresip_integration/scenarios/: basic_call.rs  call_hold.rs  dtmf.rs  registration.rs  registration_advanced.rs  security.rs
crates/rsiprtp/tests/fixtures/handcrafted/: README.md  ack_for_2xx.sip  cancel.sip  invite_compact_via.sip  invite_folded_subject.sip  register_with_contact.sip  response_407_with_proxy_authenticate.sip  response_with_multi_via.sip
crates/rsiprtp/tests/fixtures/mdsiprtp3/: README.md  invite_with_body.sip  invite_with_via.sip  response_200_ok.sip
crates/rsiprtp/tests/fixtures/rfc4475/: README.md  dblreq.sip  esc01.sip  esc02.sip  escnull.sip  longreq.sip  lwsdisp.sip  semiuri.sip  transports.sip  unreason.sip  wsinv.sip
crates/rsiprtp/tests/fixtures/rfc4475_invalid/: badaspec_garbage_start.sip  badaspec_no_version.sip
crates/rsiprtp/tests/fixtures/sdp/: audio_pcmu.sdp  audio_video.sdp  bandwidth.sdp  bandwidth_collision.sdp  compact_whitespace.sdp  duplicate_b_same_key.sdp  lossy_bandwidth_value.sdp  lossy_origin_tail.sdp  lossy_timing.sdp  media_type_other.sdp  minimal.sdp  misordered_after_m.sdp  missing_session_name.sdp  multi_c_per_media.sdp  num_ports.sdp  rfc4566_example.sdp  session_b_dropped.sdp  trim_corners.sdp  unknown_types_media_level.sdp  version_normalize.sdp
crates/rsiprtp/tests/parser_diff_oracle/: mod.rs
crates/rsiprtp/tests/parser_roundtrip_oracle/: mod.rs
crates/rsiprtp/tests/sdp_roundtrip_oracle/: mod.rs
crates/rsiprtp/tests/stack_instance/: mod.rs
docker/: docker-compose.yml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: dtmf_event.rs  ice_candidate.rs  rtcp_fir.rs  rtcp_header.rs  rtcp_nack.rs  rtcp_remb.rs  rtcp_rr.rs  rtcp_sdes.rs  rtcp_sr.rs  rtp_packet.rs  sdp_session.rs  sdp_session_roundtrip.rs  sip_digest.rs  sip_message.rs  sip_message_roundtrip.rs  sip_uri.rs  sip_via.rs  sip_via_typed_roundtrip.rs  srtp_sdes.rs  srtp_use_ext.rs
wrk_docs/: 2024.12.20 - CC - Coverage Analysis Report.md  2024.12.20 - CC - Coverage Improvement Plan.md  2025.12.05 - CR - mdsiprtp Phase 1 Code Review.md  2025.12.05 - Fix Plan - Code Review Issues.md  2025.12.06 - CC - code coverage analysis.md  2025.12.06 - CC - coverage improvement plan.md  2025.12.06 - CC - coverage progress update.md  2025.12.06 - Ralph Prompt - Full Production Stack.md  2025.12.06 - ralph prompt - complete incomplete implementations.md  2025.12.13 - CC - Code Coverage Analysis Report.md  2025.12.13 - CC - Coverage Improvement Plan.md  2026.01.13 - Coverage Progress and Plan.md  2026.01.13 - Coverage Status and Plan.md  2026.01.13 - sip-rtp-library-comparison.md  2026.01.14 - Coverage Progress and Plan.md  (+19 more)
(+179 files in other folders)
