[package]
name = "mdsiprtp-dialog"
description = "SIP dialog management (Sans-IO)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mdsiprtp-core.workspace = true
mdsiprtp-sip.workspace = true
mdsiprtp-transaction.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
