[package]
name = "mdsiprtp-media"
description = "Audio codecs, jitter buffer, and mixing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mdsiprtp-core.workspace = true
mdsiprtp-rtp.workspace = true
audio-codec-algorithms.workspace = true
ezk-g722.workspace = true
audiopus = { workspace = true, optional = true }
dasp.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
opus = ["audiopus"]
