[package]
name = "mdsiprtp-session"
description = "High-level call and session management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mdsiprtp-core.workspace = true
mdsiprtp-sip.workspace = true
mdsiprtp-transaction.workspace = true
mdsiprtp-dialog.workspace = true
mdsiprtp-transport.workspace = true
mdsiprtp-sdp.workspace = true
mdsiprtp-rtp.workspace = true
mdsiprtp-media.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# Pull in the Opus codec for the bitrate-bridge integration test. Opus is
# feature-gated in mdsiprtp-media; the rest of the workspace defaults work
# without it.
# `opus` here pulls ropus into test binaries only; production `cargo build` of this crate is unaffected.
mdsiprtp-media = { workspace = true, features = ["opus"] }
