[package]
name = "mdsiprtp-sip"
description = "SIP message parsing and building for mdsiprtp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mdsiprtp-core.workspace = true
rsip.workspace = true
thiserror.workspace = true
bytes.workspace = true
