[package]
name = "rsiprtp-session"
publish = false
description = "High-level call and session management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rsiprtp-core.workspace = true
rsiprtp-sip.workspace = true
rsiprtp-transaction.workspace = true
rsiprtp-dialog.workspace = true
rsiprtp-transport.workspace = true
rsiprtp-sdp.workspace = true
rsiprtp-rtp.workspace = true
rsiprtp-media.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# Pull in the Opus codec for the bitrate-bridge integration test. Opus is
# feature-gated in rsiprtp-media; the rest of the workspace defaults work
# without it.
# `opus` here pulls ropus into test binaries only; production `cargo build` of this crate is unaffected.
rsiprtp-media = { workspace = true, features = ["opus"] }
