[package]
name = "rsiprtp-session"
description = "High-level call and session management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rsiprtp-core.workspace = true
rsiprtp-sip.workspace = true
rsiprtp-transaction.workspace = true
rsiprtp-dialog.workspace = true
rsiprtp-transport.workspace = true
rsiprtp-sdp.workspace = true
rsiprtp-rtp.workspace = true
# Opus is feature-gated in rsiprtp-media; rsiprtp-session always needs it
# because `SessionCodec` dispatches Opus unconditionally. Cargo merges
# features across the workspace, so this also covers tests.
rsiprtp-media = { workspace = true, features = ["opus"] }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
