[package]
name = "rsiprtp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rsiprtp]
path = ".."

# Standalone workspace so the fuzz crate isn't pulled into the main one.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "sip_message_parse"
path = "fuzz_targets/sip_message_parse.rs"
test = false
doc = false
bench = false
