[package]
name = "rsiprtp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# `rsip` 0.4 is the differential-test oracle for the
# `sip_message_parse_diff` target. It is a regular dependency of the
# fuzz crate (and only of the fuzz crate) — `crates/rsiprtp` itself
# carries `rsip` solely as a `[dev-dependencies]` entry, since M10 of
# the parser rewrite removed it from the runtime deps. The fuzz target
# pulls in `tests/parser_diff_oracle/mod.rs` via `#[path]`, and that
# file references `rsip::SipMessage` directly.
rsip = "0.4"

[dependencies.rsiprtp]
path = ".."

# Standalone workspace so the fuzz crate isn't pulled into the main one.
[workspace]
members = ["."]
resolver = "2"

[profile.release]
debug = 1

[[bin]]
name = "sip_message_parse"
path = "fuzz_targets/sip_message_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sip_message_parse_diff"
path = "fuzz_targets/sip_message_parse_diff.rs"
test = false
doc = false
bench = false
